<resources>
    <string name="app_name">CHEFOOD</string>
    <string name="menu_home">Inicio</string>
    <string name="menu_person">Perfil</string>
    <string name="menu_movie">Video</string>
    <string name="menu_web">Navegador</string>
    <string name="open">open</string>
    <string name="close">close</string>
    <string name="nav_bars">nav_bars</string>
    <string name="new_food">Crear Receta</string>
    <string name="card_image">Imagen de receta</string>
    <string name="header">Summer Harvest SuperBowl</string>
    <string name="calories">Calorias</string>
    <string name="total_calories">total calorías</string>
    <string name="carbo">Carbohidratos</string>
    <string name="total_carbo">total carbohidratos</string>
    <string name="protein">Proteina</string>
    <string name="total_protein">total proteina</string>
    <string name="grass">Grasa totales</string>
    <string name="total_grass">total grasas</string>
    <string name="description">Pasta italiana con salsa pesto</string>
    <string name="bt_add">Agregar Receta</string>
    <string name="bt_delete">Eliminar</string>
    <string name="bt_favorite">Favorito</string>
    <string name="bt_view">Vista</string>
    <string name="bt_close">Cerrar</string>
    <string name="lorem">Loremd dsjfsdf sdsdf a 34r wsdf af 2rwe asfsadf</string>
    <string name="info">Descripción</string>
    <string name="ingredients">Ingredientes</string>
    <string name="steps">Preparación</string>
    <string name="tag">Categorias</string>
    <string name="addInfo">Información</string>
    <string name="addIngredient">Agregar otro ingrediente</string>
    <string name="addName">Titulo</string>
    <string name="addDescription">Descripción</string>
    <string name="addCategories">Categorias</string>
    <string name="addStep">Pasos de preparación</string>
    <string name="addTag">Agregar otro paso</string>
    <string name="createFood">Crear comida</string>
    <string name="ic_ingredient">Icono de ingrediente</string>
    <string name="ic_categorie">Icono de categoria</string>
    <string name="info_categorie">Información de categoria</string>
    <string name="pref_diet">preferencia de dieta</string>
    <string name="plan_diet">planeación de dieta</string>
    <string name="breakfast">desayuno</string>
    <string name="des_breakfast">Comienzo Saludable</string>
    <string name="lunch">almuerzo</string>
    <string name="des_lunch">Rico en Proteina</string>
    <string name="dinner">comida</string>
    <string name="des_dinner">Sin Gluten</string>
    <string name="snack">merienda</string>
    <string name="des_snack">Alto en Carbohidratos</string>
    <string name="resumen">Resumen Diario</string>
    <string name="savePlan">Guardar plan</string>
    <string name="savePreference">Guardar preferencias</string>
    <string name="listFavorite">Listado de favoritas</string>
    <string name="cancelPlan">Cancelar plan</string>
    <string name="value">0</string>
    <string name="show_more">Ver más</string>
    <string name="change">Cambiar</string>
    <string name="addPlan">Agregar comida</string>
    <string name="nav_calendar">Planeación</string>
    <string name="nav_favorite">Favorito</string>
    <string name="conten_movie">Imagen de video</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>