<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".modal.AddFoodFragment">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolBarNewFood"
            app:title=""
            android:background="@color/main"
            android:layout_width="match_parent"
            android:layout_height="80dp">
            <ImageView
                android:id="@+id/closeAddModal"
                android:contentDescription="@string/close"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_gravity="start"
                android:src="@drawable/ic_close"
                app:tint="@color/white"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/new_food"
                android:textSize="25sp"
                android:textStyle="bold"
                android:layout_gravity="end"
                android:textColor="@color/white"
                android:layout_marginEnd="10dp"/>
        </androidx.appcompat.widget.Toolbar>
        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:clipToPadding="false"
            android:backgroundTint="@color/white">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="15dp">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/addName"
                        android:textAllCaps="true"
                        android:textSize="15sp"
                        android:textStyle="bold"
                        android:textColor="@color/black"/>
                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingTop="5dp"
                        style="@style/CustomTextInputLayout">
                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/etTitle"
                            android:layout_width="match_parent"
                            android:hint="Titulo Receta"
                            android:layout_height="56dp"
                            android:paddingStart="15dp"
                            android:paddingEnd="15dp"/>
                    </com.google.android.material.textfield.TextInputLayout>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:paddingTop="15dp">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/addDescription"
                        android:textAllCaps="true"
                        android:textSize="15sp"
                        android:textStyle="bold"
                        android:textColor="@color/black"/>
                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingTop="5dp"
                        style="@style/CustomTextInputLayout">
                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/etDescription"
                            android:layout_width="match_parent"
                            android:hint="Descripción Receta"
                            android:layout_height="100dp"/>
                    </com.google.android.material.textfield.TextInputLayout>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:paddingTop="15dp">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/addCategories"
                        android:textAllCaps="true"
                        android:textSize="15sp"
                        android:textStyle="bold"
                        android:textColor="@color/black"/>
                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/recycleAddTag"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="10dp"
                        tools:itemCount="0"
                        android:contentDescription="@string/tag"/>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:paddingTop="15dp">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/addInfo"
                        android:textAllCaps="true"
                        android:textSize="15sp"
                        android:textStyle="bold"
                        android:textColor="@color/black"/>
                    <include
                        layout="@layout/item_form_info"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:paddingTop="10dp">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/ingredients"
                        android:textAllCaps="true"
                        android:textSize="15sp"
                        android:textStyle="bold"
                        android:paddingBottom="5dp"
                        android:textColor="@color/black"/>
                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/recycleaddIngredient"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="5dp"
                        tools:itemCount="0"
                        android:contentDescription="@string/ingredients"/>
                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/addIngredient"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/addIngredient"
                        app:icon="@drawable/ic_add_circle"
                        app:iconGravity="textStart"
                        app:iconPadding="8dp"
                        android:textColor="@color/black"
                        android:textStyle="italic"
                        app:iconTint="@color/black"
                        android:background="@drawable/bg_dashed"/>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:paddingTop="10dp"
                    android:paddingBottom="10dp">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingTop="5dp"
                        android:text="@string/addStep"
                        android:textAllCaps="true"
                        android:textSize="15sp"
                        android:textStyle="bold"
                        android:paddingBottom="5dp"
                        android:textColor="@color/black"/>
                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/recycleaddStep"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="5dp"
                        tools:itemCount="0"
                        android:contentDescription="@string/steps"/>
                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/addStep"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/addTag"
                        app:icon="@drawable/ic_playlist_add"
                        app:iconGravity="textStart"
                        app:iconPadding="8dp"
                        android:textColor="@color/black"
                        android:textStyle="italic"
                        app:iconTint="@color/black"
                        android:background="@drawable/bg_dashed"/>
                </LinearLayout>
                <com.google.android.material.button.MaterialButton
                    android:id="@+id/newFood"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/createFood"
                    app:icon="@drawable/ic_save"
                    app:iconGravity="textStart"
                    android:textColor="@color/white"
                    android:textStyle="bold"
                    android:backgroundTint="@color/calories"
                    app:iconTint="@color/white"/>
            </LinearLayout>
        </androidx.core.widget.NestedScrollView>
    </LinearLayout>

</FrameLayout>