<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:layout_weight="1"
            style="@style/CustomTextInputLayout">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etCalories"
                android:layout_width="match_parent"
                android:hint="@string/calories"
                android:layout_height="56dp"
                android:paddingStart="15dp"
                android:paddingEnd="15dp"/>
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:layout_weight="1"
            style="@style/CustomTextInputLayout">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etCarbo"
                android:layout_width="match_parent"
                android:hint="@string/carbo"
                android:layout_height="56dp"
                android:paddingStart="15dp"
                android:paddingEnd="15dp"/>
        </com.google.android.material.textfield.TextInputLayout>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:layout_weight="1"
            style="@style/CustomTextInputLayout">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etProtein"
                android:layout_width="match_parent"
                android:hint="@string/protein"
                android:layout_height="56dp"
                android:paddingStart="15dp"
                android:paddingEnd="15dp"/>
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:layout_weight="1"
            style="@style/CustomTextInputLayout">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etGrass"
                android:layout_width="match_parent"
                android:hint="@string/grass"
                android:layout_height="56dp"
                android:paddingStart="15dp"
                android:paddingEnd="15dp"/>
        </com.google.android.material.textfield.TextInputLayout>
    </LinearLayout>
</LinearLayout>