<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CalendarFragment">
    <LinearLayout
        android:id="@+id/headCalendar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/plan_diet"
            android:textAllCaps="true"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold"
            android:padding="10dp"/>
    </LinearLayout>
    <androidx.core.widget.NestedScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:clipToPadding="false"
        android:backgroundTint="@color/white"
        app:layout_constraintTop_toBottomOf="@id/headCalendar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingTop="5dp"
                android:paddingBottom="5dp">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="5"
                    android:text="@string/breakfast"
                    android:textAllCaps="true"
                    android:textColor="@color/black"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:padding="10dp"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/des_breakfast"
                    android:textColor="@color/white"
                    android:background="@drawable/ct_background"
                    android:backgroundTint="@color/tag_healt"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:textSize="11sp"
                    android:textStyle="bold"
                    android:layout_marginEnd="5dp"
                    android:padding="5dp"
                    android:drawableStart="@drawable/ic_avocado"
                    android:drawablePadding="5dp"
                    app:drawableTint="@color/white"/>
            </LinearLayout>
            <LinearLayout
                android:id="@+id/contentBreakfast"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp"
                android:layout_marginLeft="10dp"
                android:background="@drawable/bg_dashed">
                <com.google.android.material.button.MaterialButton
                    android:id="@+id/addBreakfast"
                    android:layout_width="match_parent"
                    android:layout_height="80dp"
                    android:text="@string/addPlan"
                    app:icon="@drawable/ic_add_circle"
                    app:iconGravity="textStart"
                    app:iconPadding="8dp"
                    android:textColor="@color/black"
                    android:textStyle="italic"
                    app:iconTint="@color/black"
                    app:backgroundTint="@android:color/transparent"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingTop="5dp"
                android:paddingBottom="5dp">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="5"
                    android:text="@string/lunch"
                    android:textAllCaps="true"
                    android:textColor="@color/black"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:padding="10dp"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/des_lunch"
                    android:textColor="@color/white"
                    android:background="@drawable/ct_background"
                    android:backgroundTint="@color/tag_protein"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:textSize="11sp"
                    android:textStyle="bold"
                    android:layout_marginEnd="5dp"
                    android:padding="5dp"
                    android:drawableStart="@drawable/ic_fitness"
                    android:drawablePadding="5dp"
                    app:drawableTint="@color/white"/>
            </LinearLayout>
            <LinearLayout
                android:id="@+id/contentLunch"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp"
                android:layout_marginLeft="10dp"
                android:background="@drawable/bg_dashed">
                <com.google.android.material.button.MaterialButton
                    android:id="@+id/addLunch"
                    android:layout_width="match_parent"
                    android:layout_height="80dp"
                    android:text="@string/addPlan"
                    app:icon="@drawable/ic_add_circle"
                    app:iconGravity="textStart"
                    app:iconPadding="8dp"
                    android:textColor="@color/black"
                    android:textStyle="italic"
                    app:iconTint="@color/black"
                    app:backgroundTint="@android:color/transparent"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingTop="5dp"
                android:paddingBottom="5dp">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="5"
                    android:text="@string/dinner"
                    android:textAllCaps="true"
                    android:textColor="@color/black"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:padding="10dp"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/des_dinner"
                    android:textColor="@color/white"
                    android:background="@drawable/ct_background"
                    android:backgroundTint="@color/tag_gluten"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:textSize="11sp"
                    android:textStyle="bold"
                    android:layout_marginEnd="5dp"
                    android:padding="5dp"
                    android:drawableStart="@drawable/ic_no_food"
                    android:drawablePadding="5dp"
                    app:drawableTint="@color/white"/>
            </LinearLayout>
            <LinearLayout
                android:id="@+id/contentDinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp"
                android:layout_marginLeft="10dp"
                android:background="@drawable/bg_dashed">
                <com.google.android.material.button.MaterialButton
                    android:id="@+id/addDinner"
                    android:layout_width="match_parent"
                    android:layout_height="80dp"
                    android:text="@string/addPlan"
                    app:icon="@drawable/ic_add_circle"
                    app:iconGravity="textStart"
                    app:iconPadding="8dp"
                    android:textColor="@color/black"
                    android:textStyle="italic"
                    app:iconTint="@color/black"
                    app:backgroundTint="@android:color/transparent"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingTop="5dp"
                android:paddingBottom="5dp">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="5"
                    android:text="@string/snack"
                    android:textAllCaps="true"
                    android:textColor="@color/black"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:padding="10dp"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/des_snack"
                    android:textColor="@color/white"
                    android:background="@drawable/ct_background"
                    android:backgroundTint="@color/tag_carbo"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:textSize="11sp"
                    android:textStyle="bold"
                    android:layout_marginEnd="5dp"
                    android:padding="5dp"
                    android:drawableStart="@drawable/ic_bakery"
                    android:drawablePadding="5dp"
                    app:drawableTint="@color/white"/>
            </LinearLayout>
            <LinearLayout
                android:id="@+id/contentSnack"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp"
                android:layout_marginLeft="10dp"
                android:background="@drawable/bg_dashed">
                <com.google.android.material.button.MaterialButton
                    android:id="@+id/addSnack"
                    android:layout_width="match_parent"
                    android:layout_height="80dp"
                    android:text="@string/addPlan"
                    app:icon="@drawable/ic_add_circle"
                    app:iconGravity="textStart"
                    app:iconPadding="8dp"
                    android:textColor="@color/black"
                    android:textStyle="italic"
                    app:iconTint="@color/black"
                    app:backgroundTint="@android:color/transparent"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:background="@drawable/ct_background"
                android:backgroundTint="@color/resum_day"
                android:layout_margin="10dp">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/resumen"
                    android:textSize="18sp"
                    android:padding="10dp"
                    android:textStyle="bold"
                    android:textColor="@color/black"
                    android:drawableStart="@drawable/ic_analytics"
                    android:drawablePadding="5dp"
                    app:drawableTint="@color/tag_gluten"/>
                <include
                    layout="@layout/item_resumen"/>
                <com.google.android.material.button.MaterialButton
                    android:id="@+id/savePlan"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/savePlan"
                    app:iconGravity="textStart"
                    android:textColor="@color/white"
                    android:textStyle="bold"
                    android:textSize="18sp"
                    android:background="@drawable/ct_background"
                    app:backgroundTint="@color/plan"
                    app:iconTint="@color/white"
                    android:layout_margin="10dp"
                    android:foreground="?attr/selectableItemBackground"/>
                <com.google.android.material.button.MaterialButton
                    android:id="@+id/cancelPlan"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/cancelPlan"
                    app:iconGravity="textStart"
                    android:textColor="@color/plan"
                    android:textStyle="bold"
                    android:textSize="18sp"
                    android:background="@drawable/ct_background"
                    app:backgroundTint="@color/white"
                    android:layout_margin="10dp"
                    android:foreground="?attr/selectableItemBackground"/>
            </LinearLayout>
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>